[gd_scene load_steps=6 format=3 uid="uid://d3d6ph6ugh14g"]

[ext_resource type="Script" uid="uid://bca8urfgsjynv" path="res://Scenes/Healthbar/parallelogram.gd" id="1_1q1yd"]
[ext_resource type="Script" uid="uid://b0slabepmelyu" path="res://Scenes/PlaysUIContainer/DamageIndicator/damage_indicator.gd" id="1_o02kc"]
[ext_resource type="FontFile" uid="uid://q2kbgu0jja56" path="res://Autoloads/Resources/Fonts/sportsjersey.ttf" id="3_eqh3g"]

[sub_resource type="LabelSettings" id="LabelSettings_eqh3g"]
font = ExtResource("3_eqh3g")
font_size = 48
font_color = Color(0.89411765, 0.84313726, 0.78039217, 1)
outline_size = 16
outline_color = Color(0.23529412, 0.20392157, 0.29803923, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5spmj"]
font = ExtResource("3_eqh3g")
font_size = 48
font_color = Color(0.89411765, 0.84313726, 0.78039217, 1)
outline_size = 16
outline_color = Color(0.23529412, 0.20392157, 0.29803923, 1)

[node name="DamageIndicator" type="MarginContainer"]
custom_minimum_size = Vector2(470, 290)
offset_right = 470.0
offset_bottom = 292.0
size_flags_horizontal = 2
script = ExtResource("1_o02kc")
damage_dict_array = Array[Dictionary]([Dictionary[int, int]({
0: -1,
1: -1,
2: -1,
3: -1
}), Dictionary[int, int]({
0: -1,
1: -1,
2: -1,
3: -1
})])

[node name="MainContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = -98

[node name="BoardSideMainNode" type="Control" parent="MainContainer"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(465, 292)
layout_mode = 2

[node name="DamageBGBlack" type="Polygon2D" parent="MainContainer/BoardSideMainNode"]
color = Color(0.23529412, 0.20392157, 0.29803923, 1)
polygon = PackedVector2Array(74, 292, 0, 0, 395, 0, 470, 292)
script = ExtResource("1_1q1yd")
metadata/_custom_type_script = "uid://bca8urfgsjynv"
metadata/_edit_lock_ = true

[node name="DamageBGOrange2" type="Polygon2D" parent="MainContainer/BoardSideMainNode/DamageBGBlack"]
color = Color(0.9843137, 0.72156864, 0.40392157, 1)
polygon = PackedVector2Array(51, 138, 20, 16, 190, 16, 227, 138)
script = ExtResource("1_1q1yd")
metadata/_custom_type_script = "uid://bca8urfgsjynv"
metadata/_edit_lock_ = true

[node name="DamageBGOrange3" type="Polygon2D" parent="MainContainer/BoardSideMainNode/DamageBGBlack"]
position = Vector2(198, 0)
color = Color(0.9843137, 0.72156864, 0.40392157, 1)
polygon = PackedVector2Array(45, 138, 8, 16, 185, 16, 217, 138)
script = ExtResource("1_1q1yd")
metadata/_custom_type_script = "uid://bca8urfgsjynv"
metadata/_edit_lock_ = true

[node name="DamageBGOrange4" type="Polygon2D" parent="MainContainer/BoardSideMainNode/DamageBGBlack"]
position = Vector2(35, 138)
color = Color(0.9843137, 0.72156864, 0.40392157, 1)
polygon = PackedVector2Array(51, 138, 20, 16, 197, 16, 234, 138)
script = ExtResource("1_1q1yd")
metadata/_custom_type_script = "uid://bca8urfgsjynv"
metadata/_edit_lock_ = true

[node name="DamageBGOrange5" type="Polygon2D" parent="MainContainer/BoardSideMainNode/DamageBGBlack"]
position = Vector2(240, 138)
color = Color(0.9843137, 0.72156864, 0.40392157, 1)
polygon = PackedVector2Array(45, 138, 8, 16, 178, 16, 210, 138)
script = ExtResource("1_1q1yd")
metadata/_custom_type_script = "uid://bca8urfgsjynv"
metadata/_edit_lock_ = true

[node name="TargetLines" type="Node2D" parent="MainContainer/BoardSideMainNode"]

[node name="StraightUpper" type="Polygon2D" parent="MainContainer/BoardSideMainNode/TargetLines"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.78431374)
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(15, 59, 24.5, 97, 420, 97, 410.15, 59)

[node name="StraightLower" type="Polygon2D" parent="MainContainer/BoardSideMainNode/TargetLines"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.78431374)
position = Vector2(35, 135)
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(14, 59, 24, 97, 420, 97, 410.15, 59)

[node name="SidewayLeft" type="Polygon2D" parent="MainContainer/BoardSideMainNode/TargetLines"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.78431374)
position = Vector2(-79, 0)
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(284, 292, 244, 292, 155, 0, 195, 0)

[node name="SidewayRight" type="Polygon2D" parent="MainContainer/BoardSideMainNode/TargetLines"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.78431374)
position = Vector2(112, 0)
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(284, 292, 244, 292, 155, 0, 195, 0)

[node name="BoardContainer" type="VBoxContainer" parent="MainContainer/BoardSideMainNode"]
layout_mode = 0
offset_right = 465.0
offset_bottom = 292.0
theme_override_constants/separation = -8

[node name="UpperContainer" type="HBoxContainer" parent="MainContainer/BoardSideMainNode/BoardContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 0

[node name="Spacer" type="Control" parent="MainContainer/BoardSideMainNode/BoardContainer/UpperContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2

[node name="UpperLeftAnchor" type="Control" parent="MainContainer/BoardSideMainNode/BoardContainer/UpperContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(145, 150)
layout_mode = 2

[node name="Spacer2" type="Control" parent="MainContainer/BoardSideMainNode/BoardContainer/UpperContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2

[node name="UpperRightAnchor" type="Control" parent="MainContainer/BoardSideMainNode/BoardContainer/UpperContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(145, 150)
layout_mode = 2

[node name="Spacer3" type="Control" parent="MainContainer/BoardSideMainNode/BoardContainer/UpperContainer"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="LowerContainer" type="HBoxContainer" parent="MainContainer/BoardSideMainNode/BoardContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 0

[node name="Spacer3" type="Control" parent="MainContainer/BoardSideMainNode/BoardContainer/LowerContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="LowerLeftAnchor" type="Control" parent="MainContainer/BoardSideMainNode/BoardContainer/LowerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(145, 150)
layout_mode = 2

[node name="Spacer2" type="Control" parent="MainContainer/BoardSideMainNode/BoardContainer/LowerContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2

[node name="LowerRightAnchor" type="Control" parent="MainContainer/BoardSideMainNode/BoardContainer/LowerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(145, 150)
layout_mode = 2

[node name="Spacer" type="Control" parent="MainContainer/BoardSideMainNode/BoardContainer/LowerContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="LaneLabelContainer" type="HBoxContainer" parent="MainContainer/BoardSideMainNode"]
unique_name_in_owner = true
custom_minimum_size = Vector2(470, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -27.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = -80

[node name="FrontLabel" type="Label" parent="MainContainer/BoardSideMainNode/LaneLabelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "FRONT"
label_settings = SubResource("LabelSettings_eqh3g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackLabel" type="Label" parent="MainContainer/BoardSideMainNode/LaneLabelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "BACK"
label_settings = SubResource("LabelSettings_5spmj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BenchSideMainNode" type="Control" parent="MainContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(465, 292)
layout_mode = 2

[node name="DamageBGBlack2" type="Polygon2D" parent="MainContainer/BenchSideMainNode"]
position = Vector2(-4, 0)
color = Color(0.23529412, 0.20392157, 0.29803923, 1)
polygon = PackedVector2Array(74, 292, 0, 0, 395, 0, 470, 292)
script = ExtResource("1_1q1yd")
metadata/_custom_type_script = "uid://bca8urfgsjynv"
metadata/_edit_lock_ = true

[node name="DamageBGOrange2" type="Polygon2D" parent="MainContainer/BenchSideMainNode/DamageBGBlack2"]
color = Color(0.09411765, 0.34509805, 0.39215687, 1)
polygon = PackedVector2Array(51, 138, 20, 16, 190, 16, 227, 138)
script = ExtResource("1_1q1yd")
metadata/_custom_type_script = "uid://bca8urfgsjynv"
metadata/_edit_lock_ = true

[node name="DamageBGOrange3" type="Polygon2D" parent="MainContainer/BenchSideMainNode/DamageBGBlack2"]
position = Vector2(198, 0)
color = Color(0.09411765, 0.34509805, 0.39215687, 1)
polygon = PackedVector2Array(45, 138, 8, 16, 185, 16, 217, 138)
script = ExtResource("1_1q1yd")
metadata/_custom_type_script = "uid://bca8urfgsjynv"
metadata/_edit_lock_ = true

[node name="DamageBGOrange4" type="Polygon2D" parent="MainContainer/BenchSideMainNode/DamageBGBlack2"]
position = Vector2(35, 138)
color = Color(0.09411765, 0.34509805, 0.39215687, 1)
polygon = PackedVector2Array(51, 138, 20, 16, 197, 16, 234, 138)
script = ExtResource("1_1q1yd")
metadata/_custom_type_script = "uid://bca8urfgsjynv"
metadata/_edit_lock_ = true

[node name="DamageBGOrange5" type="Polygon2D" parent="MainContainer/BenchSideMainNode/DamageBGBlack2"]
position = Vector2(240, 138)
color = Color(0.09411765, 0.34509805, 0.39215687, 1)
polygon = PackedVector2Array(45, 138, 8, 16, 178, 16, 210, 138)
script = ExtResource("1_1q1yd")
metadata/_custom_type_script = "uid://bca8urfgsjynv"
metadata/_edit_lock_ = true

[node name="BenchContainer" type="VBoxContainer" parent="MainContainer/BenchSideMainNode"]
layout_mode = 0
offset_left = 4.0
offset_right = 469.0
offset_bottom = 292.0
theme_override_constants/separation = -8

[node name="BenchUpperContainer" type="HBoxContainer" parent="MainContainer/BenchSideMainNode/BenchContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 0

[node name="Spacer" type="Control" parent="MainContainer/BenchSideMainNode/BenchContainer/BenchUpperContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="BenchUpperLeftAnchor" type="Control" parent="MainContainer/BenchSideMainNode/BenchContainer/BenchUpperContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(145, 150)
layout_mode = 2

[node name="Spacer2" type="Control" parent="MainContainer/BenchSideMainNode/BenchContainer/BenchUpperContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2

[node name="BenchUpperRightAnchor" type="Control" parent="MainContainer/BenchSideMainNode/BenchContainer/BenchUpperContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(145, 150)
layout_mode = 2

[node name="Spacer3" type="Control" parent="MainContainer/BenchSideMainNode/BenchContainer/BenchUpperContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="BenchLowerContainer" type="HBoxContainer" parent="MainContainer/BenchSideMainNode/BenchContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 0

[node name="Spacer3" type="Control" parent="MainContainer/BenchSideMainNode/BenchContainer/BenchLowerContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="BenchLowerLeftAnchor" type="Control" parent="MainContainer/BenchSideMainNode/BenchContainer/BenchLowerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(145, 150)
layout_mode = 2

[node name="Spacer2" type="Control" parent="MainContainer/BenchSideMainNode/BenchContainer/BenchLowerContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2

[node name="BenchLowerRightAnchor" type="Control" parent="MainContainer/BenchSideMainNode/BenchContainer/BenchLowerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(145, 150)
layout_mode = 2

[node name="Spacer" type="Control" parent="MainContainer/BenchSideMainNode/BenchContainer/BenchLowerContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="BenchLabel" type="Label" parent="MainContainer/BenchSideMainNode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.5
offset_top = -27.5
offset_right = 232.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "BENCH"
label_settings = SubResource("LabelSettings_5spmj")
horizontal_alignment = 1
vertical_alignment = 1
